crates/gridwell-writer-pandoc/tests/snapshots/snapshots__regional-sales.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      [
        {
          "c": [
            {
              "c": "Regional",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "Sales",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "Performance",
              "t": "Str"
            }
          ],
          "t": "Para"
        },
        {
          "c": [
            {
              "c": "Fiscal",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "years",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "2023–2024",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "(in",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "millions",
              "t": "Str"
            },
            {
              "t": "Space"
            },
            {
              "c": "USD)",
              "t": "Str"
            }
          ],
          "t": "Para"
        }
      ]
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignRight"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignRight"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignRight"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              []
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              []
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              2,
              [
                {
                  "c": [
                    {
                      "c": "Financials",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ],
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Country",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Year",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Revenue",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "Profit",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        0,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                2,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "United",
                        "t": "Str"
                      },
                      {
                        "t": "Space"
                      },
                      {
                        "c": "States",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2023",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "1,250.3",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "270.1",
                        "t": "Str"
                      },
                      {
                        "c": [
                          {
                            "c": "1",
                            "t": "Str"
                          }
                        ],
                        "t": "Superscript"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2024",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "1,380.7",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "330.3",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "Canada",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2024",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "420.1",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "109.5",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ],
      [
        [
          "",
          [],
          []
        ],
        0,
        [],
        [
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "Germany",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2024",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "945.2",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "164.9",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "France",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "2024",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "610.8",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ],
              [
                [
                  "",
                  [],
                  []
                ],
                {
                  "t": "AlignDefault"
                },
                1,
                1,
                [
                  {
                    "c": [
                      {
                        "c": "120.6",
                        "t": "Str"
                      }
                    ],
                    "t": "Plain"
                  }
                ]
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              4,
              [
                {
                  "c": [
                    {
                      "c": [
                        {
                          "c": "1",
                          "t": "Str"
                        }
                      ],
                      "t": "Superscript"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "Includes",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "one-time",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "restructuring",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "charge.",
                      "t": "Str"
                    },
                    {
                      "t": "LineBreak"
                    },
                    {
                      "c": "Source:",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "Internal",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "finance",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "database,",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "June",
                      "t": "Str"
                    },
                    {
                      "t": "Space"
                    },
                    {
                      "c": "2026.",
                      "t": "Str"
                    }
                  ],
                  "t": "Para"
                }
              ]
            ]
          ]
        ]
      ]
    ]
  ],
  "t": "Table"
}
